Correção: correção no arquivo docker-compose.yml

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,5 +17,5 @@ services:
       - todofront
       - todoback
     environment:
-      - FRONY_HOST=todofront
+      - FRONT_HOST=todofront
     image: todotests
